5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1643_2704.log
== TEST (2019-04-10 22:31:42) 
-- CODE:
a= int(input("nota do aluno:"))
b=input("leia a letra:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '5.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:25:26) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (b=="S"):
	mensagem="gsdd"
else:
	mensagem="kjfihdv"
print(mensagem)	
-- OUTPUT:
gsdd
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:26:57) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (b=="S"):
	mensagem="gsdd"
else:
	mensagem="kjfihdv"
print(a)	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:27:07) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (b=="S"):
	mensagem="gsdd"
else:
	mensagem="kjfihdv"
print(a)	
-- EXECUTION TIME:
0.159416
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:27:53) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (a=="S"):
	mensagem="gsdd"
else:
	mensagem="kjfihdv"
print(a)	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:28:06) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (a=="S"):
	mensagem="gsdd"
else:
	mensagem="kjfihdv"
print(a)	
-- EXECUTION TIME:
0.158421
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:44:55) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (a>o):
	mensagem="acrescimo"
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (a>o):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:45:03) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (a>o):
	mensagem="acrescimo"
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (a>o):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:45:52) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (a>o+10):
	mensagem="acrescimo"
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (a>o+10):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:46:20) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (a>0):
	mensagem="acrescimo"
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- OUTPUT:
acrescimo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:47:54) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (a>0):
	a=a+b
	print(a)
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=a+b
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:48:33) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
if (a>0):
	a=(a+b)
	print(a)
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(a+b)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:50:08) 
-- CODE:
a= float(input("nota do aluno:"))
b=float(input("leia a letra:"))
if (a>0):
	a=(a+b)
	print(a)
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:51:40) 
-- CODE:
a= float(input("nota do aluno:"))
b=(input("leia a letra:"))
a>0=acrescimo
if (a>0):
	a=(a+acrecimo)
	print(a)
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    a>0=acrescimo
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:51:45) 
-- CODE:
a= float(input("nota do aluno:"))
b=(input("leia a letra:"))
a>0=acrescimo
if (a>0):
	a=(a+acrecimo)
	print(a)
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    a>0=acrescimo
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:52:08) 
-- CODE:
a= float(input("nota do aluno:"))
b=(input("leia a letra:"))
a>0+acrescimo
if (a>0):
	a=(a+acrecimo)
	print(a)
else:
	mensagem="nao_acrescimo"
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a>0+acrescimo
NameError: name 'acrescimo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:05:25) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=10
if (
-- ERROR:
File "XXXX", line 5
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:05:57) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=10
if (a>o+acrescimo):
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:06:58) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=10
if (a>o+acrescimo):
	mensagem="leia"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (a>o+acrescimo):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:07:16) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=10
if (a>0+acrescimo):
	mensagem="leia"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (a>o+acrescimo):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:07:39) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=10
if (a>0+acrescimo):
	mensagem="leia"
	prin(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (a>o+acrescimo):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:08:33) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=10
if (a>0+acrescimo):
	mensagem="leia"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (a>o+acrescimo):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:08:47) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=10
if (a>0+acrescimo):
	mensagem="leia"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:12:42) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=(a*10)/100
if (a>0+acrescimo):
	mensagem="sim"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:13:13) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=(a*10)/100
if (a>0+acrescimo):
	mensagem="sim"
else:
	mensagem="nao"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:13:41) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=(a*10)/100
if (a>0==acrescimo):
	mensagem="sim"
else:
	mensagem="nao"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:17:07) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=(a*10)/100
if(a>0==b):
	mensagem"sim"
	print(mensagem)
-- ERROR:
File "XXXX", line 5
    mensagem"sim"
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:17:13) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra:")
acrescimo=(a*10)/100
if(a>0==b):
	mensagem="sim"
	print(mensagem)
-- ERROR:
File "XXXX", line 5
    mensagem"sim"
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:19:06) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0==b):
	mensagem="sim"
	print(mensagem)
-- ERROR:
File "XXXX", line 5
    mensagem"sim"
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:19:18) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0==b):
	mensagem="sim"
	print(mensagem)
-- ERROR:
File "XXXX", line 5
    mensagem"sim"
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:20:27) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0):
	x=a+acrescimo
	print(x)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:20:57) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0):
	x=a+acrescimo
	print(x)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:22:02) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0):
	x=a+acrescimo
	print(x)
else:
	x=a
print(x)
-- OUTPUT:
5.5
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:22:22) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0):
	x=a+acrescimo
	print(x)
else:
	x=a
print(x)
-- OUTPUT:
5.5
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 18:22:23) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0):
	x=a+acrescimo
	print(x)
else:
	x=a
print(x)
-- EXECUTION TIME:
0.13543
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.840000000000001
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:23:26) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0=="S"):
	x=a+acrescimo
	print(x)
else:
	x=a
print(x)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:24:06) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0=="S"=acrescimo):
	x=a+acrescimo
	print(x)
else:
	x=a
print(x)
-- ERROR:
File "XXXX", line 4
    if(a>0=="S"=acrescimo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:24:26) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0==b):
	x=a+acrescimo
	print(x)
else:
	x=a
print(x)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:24:47) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(a>0):
	x=a+acrescimo
	print(x)
else:
	x=a
print(x)
-- OUTPUT:
5.5
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:26:15) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(b=="S"):
	x=a+acrescimo
	print(x)
else:
	x=a
print(x)
-- OUTPUT:
5.5
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:27:10) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(b=="S"):
	x=a+acrescimo

else:
	x=a
print(x)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 18:27:20) 
-- CODE:
a= float(input("nota do aluno:"))
b=input("leia a letra S ou N:")
acrescimo=(a*10)/100
if(b=="S"):
	x=a+acrescimo

else:
	x=a
print(x)
-- EXECUTION TIME:
0.207384
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
